Change about page

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -37,11 +37,13 @@ $dark-blue-80: rgba($dark-blue, 0.8);
 $dark-blue-60: rgba($dark-blue, 0.6);
 $dark-blue-40: rgba($dark-blue, 0.4);
 $dark-blue-20: rgba($dark-blue, 0.2);
+$dark-blue-15: rgba($dark-blue, 0.15);
 $dark-blue-10: rgba($dark-blue, 0.1);
 $dark-blue-5: rgba($dark-blue, 0.05);
 
 $terracotta-10: rgba($terracotta, 0.1);
 $terracotta-20: rgba($terracotta, 0.2);
+$terracotta-30: rgba($terracotta, 0.3);
 
 // Шрифти
 $font-primary: "Manrope", sans-serif;
