--- a/src/styles/components/about/FooterSection.scss
+++ b/src/styles/components/about/FooterSection.scss
@@ -1,26 +1,10 @@
-// footerAboutSection.scss
-
-// Основная палитра
-$graphite-dark: #2a2a2a;
-$graphite-medium: #4a4a4a;
-$graphite-light: #757575;
-$dark-blue: #1a3c5a;
-$terracotta: #c96e4f;
-$milk: #f5f5f0;
-$light-gray: #e0e0e0;
-$almost-white: #fafafa;
-
-// Прозрачные версии
-$dark-blue-10: rgba($dark-blue, 0.1);
-
-// Шрифты
-$font-primary: "Manrope", sans-serif;
+@use "../../variables" as v;
 
 .footerAbout-section {
   padding: 80px 0 40px;
   position: relative;
-  background: linear-gradient(135deg, $almost-white 0%, $milk 100%);
-  border-top: 1px solid $light-gray;
+  background: linear-gradient(135deg, v.$almost-white 0%, v.$milk 100%);
+  border-top: 1px solid v.$light-gray;
 }
 
 .footerAbout-content {
@@ -36,21 +20,21 @@ $font-primary: "Manrope", sans-serif;
 .quote {
   font-size: 1.5rem;
   font-style: italic;
-  color: $graphite-medium;
+  color: v.$graphite-medium;
   margin-bottom: 1rem;
   line-height: 1.6;
   position: relative;
   padding: 2rem;
-  background: $dark-blue-10;
+  background: v.$dark-blue-10;
   border-radius: 15px;
-  border-left: 4px solid $dark-blue;
-  font-family: $font-primary;
+  border-left: 4px solid v.$dark-blue;
+  font-family: v.$font-primary;
 
   &::before,
   &::after {
     content: '"';
     font-size: 3rem;
-    color: $dark-blue;
+    color: v.$dark-blue;
     position: absolute;
     top: 10px;
     font-weight: bold;
@@ -67,9 +51,9 @@ $font-primary: "Manrope", sans-serif;
 
 .quote-author {
   font-size: 1.1rem;
-  color: $graphite-light;
+  color: v.$graphite-light;
   font-weight: 600;
   margin-top: 1rem;
   display: block;
-  font-family: $font-primary;
+  font-family: v.$font-primary;
 }
