Put the styles for the button into a style file

--- a/src/components/main/ActivityDirections/ActivityDirections.scss
+++ b/src/components/main/ActivityDirections/ActivityDirections.scss
@@ -220,6 +220,7 @@
         word-wrap: break-word;
         width: 100%;
         box-sizing: border-box;
+        color: v.$light-gray;
       }
     }
   }
